# suricatax-rule-parser-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSE.txt  README.md  cbindgen.toml
.github/workflows/: test.yml
examples/: tojson.rs
examples/c/: .gitignore  Makefile  main.c
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_rule.rs
rjs/: Cargo.toml
rjs/src/: main.rs
rulejs/: Cargo.toml
rulejs/src/: main.rs  parser.rs
src/: byte_math.rs  common.rs  ffi.rs  lib.rs  loader.rs  options.rs  parser.rs  parsers.rs  scanner.rs  types.rs  util.rs
src/parsers/: byte_jump.rs  byte_math.rs  byte_test.rs
test/: test.rules
