[package]
name = "suricatax-rule-parser"
version = "0.2.0-alpha.1"
authors = ["Jason Ish <jason@codemonkey.net>"]
edition = "2021"
rust-version = "1.75.0"
description = "A parser for Suricata rules"
repository = "https://github.com/jasonish/suricatax-rule-parser-rs"

[workspace]
members = [".", "rulejs", "fuzz"]

[dependencies]
nom = "8.0.0"
serde = { version = "1.0.228", default-features = false, features = ["std", "derive"] }
