[workspace]
members = [".", "rulejs", "fuzz"]

[workspace.package]
version = "0.2.0-alpha.1"
authors = ["Jason Ish <jason@codemonkey.net>"]
edition = "2021"
rust-version = "1.75.0"
repository = "https://github.com/jasonish/suricatax-rule-parser-rs"

[package]
name = "suricatax-rule-parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "A parser for Suricata rules"

[dependencies]
nom = "8.0.0"
serde = { version = "1.0.228", default-features = false, features = ["std", "derive"] }
