[workspace]
members = [".", "rulejs", "fuzz"]

[workspace.package]
version = "0.2.0-alpha.1"
authors = ["Jason Ish <jason@codemonkey.net>"]
edition = "2021"
rust-version = "1.75.0"
repository = "https://github.com/jasonish/suricatax-rule-parser-rs"
license = "MIT OR Apache-2.0"

[package]
name = "suricatax-rule-parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "A parser for Suricata rules"
readme = "README.md"
documentation = "https://docs.rs/suricatax-rule-parser"
keywords = ["suricata", "ids", "rules", "parser"]
categories = ["parser-implementations"]
exclude = ["/.github/**", "/fuzz/**", "/rulejs/**"]

[dependencies]
nom = "8.0.0"
serde = { version = "1.0.228", default-features = false, features = ["std", "derive"] }
