[package]
name = "suricatax-rule-parser-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.suricatax-rule-parser]
path = ".."

[[bin]]
name = "parse_rule"
path = "fuzz_targets/parse_rule.rs"
test = false
doc = false
bench = false
