[package]
name = "suricatax-rule-parser-fuzz"
version = "0.0.0"
publish = false
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.suricatax-rule-parser]
path = ".."

[[bin]]
name = "parse_rule"
path = "fuzz_targets/parse_rule.rs"
test = false
doc = false
bench = false
