[package]
name = "rulejs"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
suricatax-rule-parser = { path = ".." }
clap = { version = "4.5.51", features = ["derive"] }
serde = "1.0.228"
serde_json = "1.0.145"
